apps/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx
spec:
  selector:
      matchLabels:
        name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
        # effect: NoSchedule
      containers:
      - name: nginx
        image: nginx
