apps/pod-svc-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnetapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aspnetapp
  template:
    metadata:
      labels:
        app: aspnetapp
    spec:
      containers:
      - image: mcr.microsoft.com/dotnet/core/samples:aspnetapp
        name: aspnetapp-image
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp
spec:
  selector:
    app: aspnetapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetapp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # appgw.ingress.kubernetes.io/use-private-ip: "true"
    # kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: nginx
  # ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /aspnetapp
        backend:
          service:
            name: aspnetapp
            port:
              number: 80
        pathType: Exact

  defaultBackend:
    service:
      name: aspnetapp
      port:
        number: 80
